packages/lustre-v6.6.103.3/test/should_fail/struct_incomplete.lus
type Toto = struct {
	x : int = 1;
	y : int
}; 

node struct_incomplete (dummy : int) returns (z : Toto);
let
	z = Toto { x = 3 };
tel
